---
title: Overall
---
classDiagram
    direction TB
    class EntityInterface {
        <<Interface>>
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class AbstractCategoryItemEntity {
        <<Abstract>>
    }

    class AbstractProperty {
        <<Abstract>>
    }

    class AbstractMargin {
        <<Abstract>>
    }

    class Product {
    }

    class Task {
    }

    class TaskItem {
    }

    class TaskItemMargin {
    }

    class User {
    }

    class UserProperty {
    }

    class Group {
    }

    class GroupMargin {
    }

    class Category {
    }

    class GlobalMargin {
    }

    class GlobalProperty {
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- AbstractCategoryItemEntity
    AbstractEntity <|-- AbstractMargin
    AbstractEntity <|-- User
    AbstractEntity <|-- Group
    AbstractEntity <|-- TaskItem
    AbstractEntity <|-- TaskItemMargin
    AbstractEntity <|-- Category
    AbstractEntity <|-- AbstractProperty
    AbstractProperty <|-- GlobalProperty
    AbstractProperty <|-- UserProperty
    AbstractMargin <|-- GroupMargin
    AbstractMargin <|-- GlobalMargin
    AbstractCategoryItemEntity <|-- Product
    AbstractCategoryItemEntity <|-- Task
    User "0" --> "*" UserProperty
    Group "0" --> "*" GroupMargin
    Group "0" --> "*" Category
    Category "0" --> "*" Product
    Category "0" --> "*" Task
    Task "0" --> "*" TaskItem
    TaskItem "0" --> "*" TaskItemMargin
